<resources>
    <string name="app_name">CitationNeeded</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Citation Needed</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fname_label_text">First Name</string>
    <string name="lname_label_text">Last Name</string>
    <string name="book_title_label_text">Book Title (optional)</string>
    <string name="citation_label_text">Citation</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="tags_tv_starting_txt">Tags</string>
    <string name="enter_tag_btn">Enter Tag</string>
    <string name="delete_tag_btn">Delete Tag</string>
    <string name="tag_label_txt">Tag</string>
    <string name="dummy_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_author">Mikhail Bakunin</string>
    <string name="dummy_book_title">Manufacturing Consent</string>
    <string name="delete_citation_btn_txt">Delete Citation</string>
    <string name="search_by_tag_label_txt">Search by Tag</string>
    <string name="search_txt">Search</string>
    <string name ="search_author_btn">Search</string>
    <string name="first_name_search_label">First Name:</string>
    <string name="last_name_search_label">Last Name:</string>
    <string name="book_title_search_label">Book Title</string>
</resources>